cf_analysis_results/checkerframework_3.42.0_results_WPI/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8.txt
../dataset/june2020_dataset/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/Open688Server.java:33: error: (type.argument) $$ 4 $$ E $$ List $$ @MustCall("sendQuit") Station $$ @MustCall Object $$ ( 1195, 1202 ) $$ incompatible type argument for type parameter E of List.
	private final List<Station> stations = new ArrayList<Station>();
	                   ^
  found   : @MustCall("sendQuit") Station
  required: @MustCall Object
../dataset/june2020_dataset/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/Open688Server.java:33: error: (type.argument) $$ 4 $$ E $$ ArrayList $$ @MustCall("sendQuit") Station $$ @MustCall Object $$ ( 1229, 1236 ) $$ incompatible type argument for type parameter E of ArrayList.
	private final List<Station> stations = new ArrayList<Station>();
	                                                     ^
  found   : @MustCall("sendQuit") Station
  required: @MustCall Object
../dataset/june2020_dataset/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/Open688Server.java:47: error: (required.method.not.called) $$ 4 $$ method sendQuit $$ new TelnetSonarStation(1) $$ br.odb.open688.app.net.TelnetSonarStation $$ regular method exit $$ ( 1682, 1707 ) $$ @MustCall method sendQuit may not have been invoked on new TelnetSonarStation(1) or any of its aliases.
				.addStation(new TelnetSonarStation(1))
				            ^
  The type of object is: br.odb.open688.app.net.TelnetSonarStation.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/Open688Server.java:48: error: (required.method.not.called) $$ 4 $$ method sendQuit $$ new TelnetCartographyStation(2) $$ br.odb.open688.app.net.TelnetCartographyStation $$ regular method exit $$ ( 1725, 1756 ) $$ @MustCall method sendQuit may not have been invoked on new TelnetCartographyStation(2) or any of its aliases.
				.addStation(new TelnetCartographyStation(2))
				            ^
  The type of object is: br.odb.open688.app.net.TelnetCartographyStation.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/Open688Server.java:49: error: (required.method.not.called) $$ 4 $$ method sendQuit $$ new TelnetHealmStation(3) $$ br.odb.open688.app.net.TelnetHealmStation $$ regular method exit $$ ( 1774, 1799 ) $$ @MustCall method sendQuit may not have been invoked on new TelnetHealmStation(3) or any of its aliases.
				.addStation(new TelnetHealmStation(3))
				            ^
  The type of object is: br.odb.open688.app.net.TelnetHealmStation.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/Open688Server.java:50: error: (required.method.not.called) $$ 4 $$ method sendQuit $$ new TelnetPropulsionStation(4) $$ br.odb.open688.app.net.TelnetPropulsionStation $$ regular method exit $$ ( 1817, 1847 ) $$ @MustCall method sendQuit may not have been invoked on new TelnetPropulsionStation(4) or any of its aliases.
				.addStation(new TelnetPropulsionStation(4))
				            ^
  The type of object is: br.odb.open688.app.net.TelnetPropulsionStation.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/Open688Server.java:51: error: (required.method.not.called) $$ 4 $$ method sendQuit $$ new TelnetArmoryStation(5) $$ br.odb.open688.app.net.TelnetArmoryStation $$ regular method exit $$ ( 1865, 1891 ) $$ @MustCall method sendQuit may not have been invoked on new TelnetArmoryStation(5) or any of its aliases.
				.addStation(new TelnetArmoryStation(5)).setScenario(scenario)
				            ^
  The type of object is: br.odb.open688.app.net.TelnetArmoryStation.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/Open688Server.java:77: error: (required.method.not.called) $$ 4 $$ method sendQuit $$ s $$ br.odb.open688.app.Station $$ regular method exit $$ ( 2440, 2449 ) $$ @MustCall method sendQuit may not have been invoked on s or any of its aliases.
		for (Station s : stations) {
		             ^
  The type of object is: br.odb.open688.app.Station.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/TelnetClientServer.java:26: error: (missing.creates.mustcall.for) $$ 3 $$ openServer $$ this $$ out $$ ( 606, 998 ) $$ Method openServer re-assigns the non-final, owning field this.out, but does not have a corresponding @CreatesMustCallFor annotation.
	public void openServer() {
	            ^
../dataset/june2020_dataset/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/TelnetClientServer.java:28: error: (required.method.not.called) $$ 4 $$ method close $$ new ServerSocket(port) $$ java.net.ServerSocket $$ possible exceptional exit due to server.accept() with exception type java.io.IOException $$ ( 653, 677 ) $$ @MustCall method close may not have been invoked on new ServerSocket(port) or any of its aliases.
			server = new ServerSocket( port );
			         ^
  The type of object is: java.net.ServerSocket.
  Reason for going out of scope: possible exceptional exit due to server.accept() with exception type java.io.IOException
../dataset/june2020_dataset/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/TelnetClientServer.java:29: error: (required.method.not.called) $$ 4 $$ method close $$ server.accept() $$ java.net.Socket $$ possible exceptional exit due to socket.getOutputStream() with exception type java.io.IOException $$ ( 691, 706 ) $$ @MustCall method close may not have been invoked on server.accept() or any of its aliases.
			socket = server.accept();
			                      ^
  The type of object is: java.net.Socket.
  Reason for going out of scope: possible exceptional exit due to socket.getOutputStream() with exception type java.io.IOException
../dataset/june2020_dataset/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/TelnetClientServer.java:31: error: (required.method.not.called) $$ 4 $$ method close $$ field out $$ java.io.DataOutputStream $$  Non-final owning field might be overwritten $$ ( 755, 807 ) $$ @MustCall method close may not have been invoked on field out or any of its aliases.
			out = new DataOutputStream(socket.getOutputStream());
			    ^
  The type of object is: java.io.DataOutputStream.
  Reason for going out of scope:  Non-final owning field might be overwritten
../dataset/june2020_dataset/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/TelnetClientServer.java:108: error: (contracts.postcondition) $$ 3 $$ sendQuit $$ no information about this.out $$ this.out is @CalledMethods("close") $$ ( 2385, 2568 ) $$ postcondition of sendQuit is not satisfied.
	public void sendQuit() {
	            ^
  found   : no information about this.out
  required: this.out is @CalledMethods("close")
../dataset/june2020_dataset/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/TelnetClientServer.java:115: error: (required.method.not.called) $$ 4 $$ method close $$ field out $$ java.io.DataOutputStream $$  Non-final owning field might be overwritten $$ ( 2530, 2540 ) $$ @MustCall method close may not have been invoked on field out or any of its aliases.
		out = null;
		    ^
  The type of object is: java.io.DataOutputStream.
  Reason for going out of scope:  Non-final owning field might be overwritten
../dataset/june2020_dataset/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/HTTPStatusTicker.java:32: error: (required.method.not.called) $$ 4 $$ method close $$ os $$ java.io.OutputStream $$ possible exceptional exit due to os.write(response.getBytes()) with exception type java.io.IOException $$ ( 838, 876 ) $$ @MustCall method close may not have been invoked on os or any of its aliases.
			OutputStream os = t.getResponseBody();
			             ^
  The type of object is: java.io.OutputStream.
  Reason for going out of scope: possible exceptional exit due to os.write(response.getBytes()) with exception type java.io.IOException
15 errors
